# CamelliaBackend

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  attribute_registry.cpp  attribute_registry.h  camellia.h  camellia_constant.h  camellia_macro.h  camellia_typedef.h  manager.cpp  manager.h  message.cpp  message.h  rc_obj.cpp  structure.drawio  variant.cpp  variant.h  vcpkg-configuration.json  vcpkg.json
cmake/: CamelliaBackendConfig.cmake.in
data/: stage_data.cpp  stage_data.h
helper/: algorithm_helper.cpp  algorithm_helper.h  resource_helper.h  scripting_helper.cpp  scripting_helper.h  serialization_helper.cpp  serialization_helper.h  text_layout_helper.cpp  text_layout_helper.h
include/: attribute_registry.h  global.h  manager.h  rc_obj.h  variant.h
include/data/action/: action_data.h  action_timeline_data.h
include/data/action/continuous/: continuous_action_data.h  modifier_action_data.h
include/data/action/instant/: instant_action_data.h
include/data/basic/: curve_data.h
include/data/play/: activity_data.h  actor_data.h  beat_data.h  dialog_data.h  stage_data.h
include/helper/: algorithm_helper.h  scripting_helper.h
include/live/action/: action.h  action_timeline.h
include/live/exception/: uninitialized_exception.h
include/live/play/: activity.h  actor.h  dialog.h  stage.h  timeline_evaluator.h
interface/: interface.h
interface/csharp/: root.i  utf8_ex_str.swg  utf8_std_string.i
live/action/: action.cpp  action.h  action_timeline.cpp  action_timeline.h
live/exception/: uninitialized_exception.cpp
live/play/: activity.cpp  activity.h  actor.cpp  actor.h  dialog.cpp  dialog.h  scene.cpp  scene.h  stage.cpp  stage.h  timeline_evaluator.cpp
node/: activity.cpp  activity.h  actor.cpp  actor.h  dialog.cpp  dialog.h  scene.cpp  scene.h  stage.cpp  stage.h
node/action/: action.cpp  action.h  action_timeline.cpp  action_timeline.h
quickjs/: .gitignore  qjsc.c  quickjs-c-atomics.h  quickjs-libc.c  quickjs-opcode.h  quickjs.c  quickjs.h
quickjs/docs/docs/: cli.md  stdlib.md
schemas/: message.fbs  stage_data.fbs  variant.fbs
test/: CMakeLists.txt  scripting_test.cpp  serialization_test.cpp  stage_test.cpp  text_layout_test.cpp  value_test.cpp
vcpkg-overlays/skia/: portfile.cmake  skia-disable-image-serialization.patch  skia-functions.cmake  vcpkg.json
xxhash/: xxh_x86dispatch.c  xxh_x86dispatch.h  xxhash.c  xxhash.h
